5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1595_2894.log
== TEST (2019-03-21 16:07:33) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =(input((100.0*8)+45))

# Calculo do valor a ser pago, incluindo o frete:
total = 845.0

# Impressao do valor total:
print(total)
-- OUTPUT:
845.0845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:07:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =(input((100.0*8)+45))

# Calculo do valor a ser pago, incluindo o frete:
total = 845.0

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.182556
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:07:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =(input((100.0*8)+45))

# Calculo do valor a ser pago, incluindo o frete:
total = 845.0

# Impressao do valor total:
print(total)
-- OUTPUT:
845.0845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:09:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =(input((100.0))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8+45)

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = (100.0*8+45)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:09:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =(input((100.0))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = (100.0*8)+45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:10:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =(input((100.0))

# Calculo do valor a ser pago, incluindo o frete:
total = (var*8)+45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = (var*8)+45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:10:45) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =(input((100.0*8))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = var+45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:16:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input(100.0))

# Calculo do valor a ser pago, incluindo o frete:
total = 800+45

# Impressao do valor total:
print(total)
-- OUTPUT:
100.0845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:16:15) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input(100.0))

# Calculo do valor a ser pago, incluindo o frete:
total = 800+45

# Impressao do valor total:
print(total)
-- OUTPUT:
100.0845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:16:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input(100.0))

# Calculo do valor a ser pago, incluindo o frete:
total = 800+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.221203
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
100.0845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
100.0845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
100.0845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:16:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input(100.0))

# Calculo do valor a ser pago, incluindo o frete:
total = 800+45

# Impressao do valor total:
print(total)
-- OUTPUT:
100.0845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:16:17) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input(100.0))

# Calculo do valor a ser pago, incluindo o frete:
total = 800+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.125847
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
100.0845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
100.0845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
100.0845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:17:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input(100.0))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(total)
-- OUTPUT:
100.0845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:18:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(total)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:18:04) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.155672
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:18:05) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(total)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:18:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 100+45

# Impressao do valor total:
print()
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:18:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 100+45

# Impressao do valor total:
print(total)
-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:18:42) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 100+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.187497
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
145
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
145
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
145
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:18:42) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 100+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.237264
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
145
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:

-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
145
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:19:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 100+45

# Impressao do valor total:
print(total*8)
-- OUTPUT:
1160
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:19:10) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 100+45

# Impressao do valor total:
print(total*8)
-- EXECUTION TIME:
0.176394
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
1160
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
1160
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
1160
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:19:30) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 845.0

# Impressao do valor total:
print()
-- OUTPUT:
1160
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:19:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 845.0

# Impressao do valor total:
print(total)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:20:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 845.0

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.185949
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:20:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = var

# Impressao do valor total:
print(total)
-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:21:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 100+45

# Impressao do valor total:
print(total)
-- OUTPUT:
145
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:21:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100*8)+45

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:21:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(total)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:21:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.152824
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:26:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(845.0)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:26:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(845.0)
-- EXECUTION TIME:
0.142567
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:26:31) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(845.0)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:26:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(845.0)
-- EXECUTION TIME:
0.19669
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:28:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Cem"))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(var)
-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:28:38) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Cem"))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(var)
-- EXECUTION TIME:
0.128404
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
1.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
356.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
123987.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:28:51) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Cem"))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(total)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:29:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(var)
-- OUTPUT:
1.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:34:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =input("Instrucoes "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print()
-- ERROR:
File "XXXX", line 5
    var =input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:34:27) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =input("Instrucoes "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print()
-- ERROR:
File "XXXX", line 5
    var =input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:34:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print()
-- ERROR:
File "XXXX", line 5
    var =input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:35:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print()
-- ERROR:
File "XXXX", line 5
    var =input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:36:43) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))
input=100.0
# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print()
-- ERROR:
File "XXXX", line 5
    var =input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:36:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print()
-- ERROR:
File "XXXX", line 5
    var =input())
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 16:41:01) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(total)
-- OUTPUT:
845.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:41:12) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (100.0*8)+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.156748
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845.0
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 17:08:44) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var*8)+45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 17:08:50) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = (var*8)+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.197495
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
